_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T015_20260112_182040.log
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/api/tracking.api.spec.ts
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking*.proto"}
[94m[1m| [0m[90m Grep     [0mtracking.*service|TrackingService
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/grpc/services/tracking.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/router*.rs"}
[96m[1m| [0m[90m Read     [0mveligo-platform/proto/tracking/v1/tracking.proto
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/veligo-platform/backend/src/**/*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/veligo-platform/backend/src/main.rs"}
[94m[1m| [0m[90m Grep     [0mRouter|route|axum
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[94m[1m| [0m[90m Grep     [0mget_device_by_bike_id|get_latest_position
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/repository.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/test_routes.rs"}
[94m[1m| [0m[90m Grep     [0mtest_routes
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/test_api.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/fixtures/**/*.json"}
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/fixtures/bikes.json
[94m[1m| [0m[90m Grep     [0mauth_middleware|require_auth
Je vais maintenant implémenter la solution. Le problème est que l'endpoint de tracking existe mais retourne un format différent de ce que les tests E2E attendent. Je vais ajouter un endpoint compatible.
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
Maintenant vérifions que le code compile:
[91m[1m| [0m[90m Bash     [0mCheck if backend code compiles

warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/Cargo.toml
workspace: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/Cargo.toml
    Checking veligo-api v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
warning: unused import: `Method`
 --> backend/src/api/test_api.rs:8:12
  |
8 |     http::{Method, StatusCode},
  |            ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> backend/src/infrastructure/email/queue.rs:9:22
  |
9 | use tracing::{debug, error, info, warn};
  |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/email/mod.rs:23:15
   |
23 | use tracing::{error, info, warn};
   |               ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/erp/erp_client.rs:12:22
   |
12 | use tracing::{debug, error, info};
   |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/multimodal/tcl_client.rs:18:22
   |
18 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

warning: `veligo-api` (lib) generated 5 warnings (run `cargo fix --lib -p veligo-api` to apply 5 suggestions)
error[E0425]: cannot find function `tracking_routes` in this scope
   --> backend/src/bin/http-server.rs:271:13
    |
271 |             tracking_routes(TrackingState::new(pool_arc.clone())),
    |             ^^^^^^^^^^^^^^^
    |
   ::: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/api/pricing_api.rs:23:1
    |
 23 | pub fn pricing_routes(pool: PgPool) -> Router {
    | --------------------------------------------- similarly named function `pricing_routes` defined here
    |
help: a function with a similar name exists
    |

[94m[1m| [0m[90m Grep     [0muse veligo_api::infrastructure
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/bin/http-server.rs
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/infrastructure/http/mod.rs"}
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/http/mod.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/http/mod.rs
[91m[1m| [0m[90m Bash     [0mList tracking module files

total 232
drwxr-xr-x   9 sylvain  staff    288 Dec 29 22:05 .
drwxr-xr-x  29 sylvain  staff    928 Jan  9 06:55 ..
-rw-------   1 sylvain  staff   4438 Dec 26 22:37 README.md
-rw-------   1 sylvain  staff  16702 Dec 29 22:05 abeeway_client.rs
-rw-------   1 sylvain  staff   7329 Dec 26 22:44 config.rs
-rw-------   1 sylvain  staff  18159 Dec 28 02:18 distance.rs
-rw-------   1 sylvain  staff    573 Dec 27 11:51 mod.rs
-rw-------   1 sylvain  staff  26593 Dec 28 02:19 repository.rs
-rw-------   1 sylvain  staff  27062 Jan 12 18:18 routes.rs

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/mod.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/tracking/mod.rs
